# ChemGP

./: .JuliaFormatter.toml  .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHEATSHEET.org  CITATION.cff  CNAME  CODE_AUDIT_FINDINGS.md  Cargo.toml  LICENSE  Project.toml  README.md  dimer_gp.jl  example_system.jl  genindex.html  index.html  installation.html  lj13_traj.xyz  objects.inv  petmad_hcn_v15xs.ini  pixi.toml  quickstart.html  readme_src.org  search.html  searchindex.js  sitemap.xml  system100_neb_path_aie.con  system100_neb_path_neb.con  system100_neb_path_oie.con  system100_neb_sp_aie.con  system100_neb_sp_neb.con  system100_neb_sp_oie.con  towncrier.toml
.github/workflows/: CI.yml  CompatHelper.yml  Documentation.yml  TagBot.yml  ci_doc_commenter.yml  pre_commit.yml
.snakemake/metadata/: L2hvbWUvcmdvc3dhbWkvR2l0L0dpdGh1Yi9SdXN0L0NoZW1HUC9kb2NzL3NvdXJjZS9fc3RhdGljL2ZpZ3VyZXMvbGVwc19haWVfb2llLnBuZw==  L2hvbWUvcmdvc3dhbWkvR2l0L0dpdGh1Yi9SdXN0L0NoZW1HUC9kb2NzL3NvdXJjZS9fc3RhdGljL2ZpZ3VyZXMvbGVwc19mcHMucG5n  L2hvbWUvcmdvc3dhbWkvR2l0L0dpdGh1Yi9SdXN0L0NoZW1HUC9kb2NzL3NvdXJjZS9fc3RhdGljL2ZpZ3VyZXMvbGVwc19taW5pbWl6ZV9jb252ZXJnZW5jZS5wbmc=  L2hvbWUvcmdvc3dhbWkvR2l0L0dpdGh1Yi9SdXN0L0NoZW1HUC9kb2NzL3NvdXJjZS9fc3RhdGljL2ZpZ3VyZXMvbGVwc19uZWIucG5n  L2hvbWUvcmdvc3dhbWkvR2l0L0dpdGh1Yi9SdXN0L0NoZW1HUC9kb2NzL3NvdXJjZS9fc3RhdGljL2ZpZ3VyZXMvbGVwc19ubGxfbGFuZHNjYXBlLnBuZw==  L2hvbWUvcmdvc3dhbWkvR2l0L0dpdGh1Yi9SdXN0L0NoZW1HUC9kb2NzL3NvdXJjZS9fc3RhdGljL2ZpZ3VyZXMvbGVwc19yZmZfcXVhbGl0eS5wbmc=  L2hvbWUvcmdvc3dhbWkvR2l0L0dpdGh1Yi9SdXN0L0NoZW1HUC9kb2NzL3NvdXJjZS9fc3RhdGljL2ZpZ3VyZXMvbWJfZ3BfcHJvZ3Jlc3Npb24ucG5n  L2hvbWUvcmdvc3dhbWkvR2l0L0dpdGh1Yi9SdXN0L0NoZW1HUC9kb2NzL3NvdXJjZS9fc3RhdGljL2ZpZ3VyZXMvbWJfZ3BfcHJvZ3Jlc3Npb25fc2NhdHRlcmVkLnBuZw==  L2hvbWUvcmdvc3dhbWkvR2l0L0dpdGh1Yi9SdXN0L0NoZW1HUC9kb2NzL3NvdXJjZS9fc3RhdGljL2ZpZ3VyZXMvbWJfaHlwZXJwYXJhbXMucG5n  L2hvbWUvcmdvc3dhbWkvR2l0L0dpdGh1Yi9SdXN0L0NoZW1HUC9kb2NzL3NvdXJjZS9fc3RhdGljL2ZpZ3VyZXMvbWJfbmViLnBuZw==  L2hvbWUvcmdvc3dhbWkvR2l0L0dpdGh1Yi9SdXN0L0NoZW1HUC9kb2NzL3NvdXJjZS9fc3RhdGljL2ZpZ3VyZXMvbWJfdHJ1c3RfcmVnaW9uLnBuZw==  L2hvbWUvcmdvc3dhbWkvR2l0L0dpdGh1Yi9SdXN0L0NoZW1HUC9kb2NzL3NvdXJjZS9fc3RhdGljL2ZpZ3VyZXMvbWJfdmFyaWFuY2UucG5n  L2hvbWUvcmdvc3dhbWkvR2l0L0dpdGh1Yi9SdXN0L0NoZW1HUC9kb2NzL3NvdXJjZS9fc3RhdGljL2ZpZ3VyZXMvc3lzdGVtMTAwX25lYl9sYW5kc2NhcGUucG5n  L2hvbWUvcmdvc3dhbWkvR2l0L0dpdGh1Yi9SdXN0L0NoZW1HUC9kb2NzL3NvdXJjZS9fc3RhdGljL2ZpZ3VyZXMvc3lzdGVtMTAwX25lYl9wcm9maWxlLnBuZw==  (+86 more)
_sources/: index.rst.txt  installation.rst.txt  quickstart.rst.txt
api/: index.html
benchmarks/: .gitignore  README.org  pixi.toml
chemgp-rs/: .gitignore  Cargo.toml
chemgp-rs/crates/chemgp-core/: Cargo.toml
chemgp-rs/crates/chemgp-core/examples/: leps_dimer.rs  leps_minimize.rs  leps_neb.rs
chemgp-rs/crates/chemgp-core/src/: covariance.rs  dimer.rs  invdist.rs  kernel.rs  lbfgs.rs  minimize.rs  neb.rs  neb_oie.rs  otgpd.rs  potentials.rs  predict.rs  rff.rs  scg.rs  train.rs  types.rs
config/: eon_serve_petmad.ini
crates/chemgp-core/: Cargo.toml  build.rs
crates/chemgp-core/examples/: compare_lbfgs_step_cap.rs  compare_mb_lbfgs.rs  hcn_dimer.rs  hcn_neb.rs  leps_dimer.rs  leps_fps.rs  leps_kernel_comparison.rs  leps_minimize.rs  leps_neb.rs  leps_nll_landscape.rs  leps_rff_quality.rs  mb_dimer.rs  mb_gp_quality.rs  mb_hyperparams.rs  mb_minimize.rs  mb_neb.rs  mb_trust.rs  metatomic_dimer.rs  petmad_minimize.rs  petmad_minimize_local.rs  petmad_rff_quality.rs  rpc_dimer.rs  rpc_smoke_test.rs  system100_neb.rs  system100_neb_local.rs  test_lbfgs_baseline.rs
crates/chemgp-core/src/: benchmarking.rs  covariance.rs  dimer.rs  dimer_utils.rs  distances.rs  emd.rs  error.rs  hod.rs  idpp.rs  internal_coords.rs  invdist.rs  io.rs  kernel.rs  lbfgs.rs  lib.rs  minimize.rs  neb.rs  neb_oie.rs  neb_path.rs  nll.rs  optim_step.rs  oracle.rs  otgpd.rs  potentials.rs  predict.rs  prior_mean.rs  rff.rs  sampling.rs  scg.rs  train.rs  trust.rs  types.rs
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  make.jl  materialsCloudArchive_readme.md  readme_materialscloudarchive.md
docs/source/: conf.py  (+3 more)
examples/: dimer_lj.jl  minimize_lj.jl  petmad_hcn_neb.jl  rpc_minimize.jl
ext/: ChemGPAtomsBaseExt.jl  ChemGPMLflowExt.jl
reference/: architecture.html  kernel_design.html  trust_regions.html
scripts/: _theme.py  check_potserv.sh  env_setup.sh  jsonl_to_h5.py  jsonl_writer.py  plot_comparisons.py  plot_gp_quality.py  plot_rff_quality.py  plot_rpc_results.py  plot_surfaces.py  plot_trust_illustration.py
src/: ChemGP.jl  MolecularKernel.jl  derivatives.jl  distances.jl  distances_emd.jl  distances_trust.jl  functions.jl  invdist.jl  nystrom.jl  rff.jl  sampling.jl  types.jl
test/: cpp_consistency.jl  runtests.jl  test_atomsbase.jl  test_dimer.jl  test_distances.jl  test_distances_trust.jl  test_emd.jl  test_kernels.jl  test_lbfgs.jl  test_leps.jl  test_minimize.jl  test_muller_brown.jl  test_neb.jl  test_neb_rpc.jl  test_otgpd.jl  test_rpc.jl  test_sampling.jl  test_scg.jl  test_variance.jl
tutorials/: constant_kernel.html  dimer_method.html  gp_basics.html  hyperparameter_training.html  minimization.html  molecular_kernels.html  neb_method.html  otgpd.html  production_minimize.html  production_neb.html  production_saddle.html  scalability.html
workflow/: Snakefile  config.yml
(+240 files in other folders)
