[package]
name = "chemgp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GP-accelerated molecular optimization: kernels, SCG, minimization, dimer, NEB"
repository = "https://github.com/lode-org/ChemGP"
documentation = "https://chemgp.rgoswami.me"
homepage = "https://chemgp.rgoswami.me"
keywords = ["gaussian-process", "optimization", "chemistry", "neb", "dimer"]
categories = ["science", "mathematics"]
authors = ["Rohit Goswami <rgoswami@ieee.org>"]
readme = "../../README.md"

[features]
default = []
io = ["dep:chemfiles", "dep:readcon-core"]
rgpot = ["dep:rgpot-core"]
cli = ["dep:clap"]

[dependencies]
faer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
chemfiles = { workspace = true, optional = true }
readcon-core = { workspace = true, optional = true }
rgpot-core = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }

# Feature-gated examples: cargo won't build these without the required features.
[[example]]
name = "petmad_minimize"
required-features = ["rgpot"]

[[example]]
name = "rpc_smoke_test"
required-features = ["rgpot"]

[[example]]
name = "hcn_dimer"
required-features = ["io", "rgpot"]

[[example]]
name = "rpc_dimer"
required-features = ["io", "rgpot"]

[[example]]
name = "petmad_rff_quality"
required-features = ["io", "rgpot"]

[[example]]
name = "system100_neb"
required-features = ["cli", "io", "rgpot"]
