[package]
name = "chemgp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GP-accelerated molecular optimization: kernels, SCG, minimization, dimer, NEB"

[features]
default = []
io = ["dep:chemfiles", "dep:readcon-core"]
rgpot = ["dep:rgpot-core"]

[dependencies]
faer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
chemfiles = { workspace = true, optional = true }
readcon-core = { workspace = true, optional = true }
rgpot-core = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
